--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography">
+  <body>
     <app-main></app-main>
   </body>
 </html>
